[gd_scene load_steps=10 format=3 uid="uid://cftp5p1mapgu7"]

[ext_resource type="Script" path="res://game/scripts/menu/shows_player_name.gd" id="1_dqvdp"]
[ext_resource type="Script" path="res://game/scripts/menu/forces_current_time.gd" id="1_leenb"]
[ext_resource type="Script" path="res://addons/game_manager/pause/unpauseable.gd" id="1_oan6g"]
[ext_resource type="Script" path="res://game/scripts/menu/shows_current_time.gd" id="1_xnbe0"]
[ext_resource type="Script" path="res://game/scripts/menu/grabs_focus.gd" id="2_fotte"]
[ext_resource type="Script" path="res://game/scripts/menu/submit_presses.gd" id="4_gh2dm"]
[ext_resource type="Script" path="res://game/scripts/menu/requires_score_and_name.gd" id="5_kuxbm"]
[ext_resource type="Script" path="res://game/scripts/menu/submits_score.gd" id="8_p50pp"]
[ext_resource type="Script" path="res://game/scripts/menu/cancels_score.gd" id="9_3lcgs"]

[node name="SubmitScorePopup" type="PanelContainer"]

[node name="Unpauseable" type="Node" parent="."]
script = ExtResource("1_oan6g")

[node name="ForcesCurrentTime" type="Node" parent="."]
script = ExtResource("1_leenb")
forced_current_time = 2998.0

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.13, 0.13, 0.13, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="NameInput" type="LineEdit" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Your Name"
alignment = 1
max_length = 14
expand_to_text_length = true
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
caret_blink = true

[node name="ShowsPlayerName" type="Node" parent="MarginContainer/VBoxContainer/NameInput"]
script = ExtResource("1_dqvdp")

[node name="GrabsFocus" type="Node" parent="MarginContainer/VBoxContainer/NameInput"]
script = ExtResource("2_fotte")

[node name="ScoreInput" type="LineEdit" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "--:--:--.---"
placeholder_text = "--:--:--.---"
alignment = 1
editable = false
expand_to_text_length = true

[node name="ShowsCurrentTime" type="Node" parent="MarginContainer/VBoxContainer/ScoreInput"]
script = ExtResource("1_xnbe0")

[node name="SubmitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Submit Score"

[node name="SubmitPresses" type="Node" parent="MarginContainer/VBoxContainer/SubmitButton"]
script = ExtResource("4_gh2dm")

[node name="RequiresScoreAndName" type="Node" parent="MarginContainer/VBoxContainer/SubmitButton"]
script = ExtResource("5_kuxbm")

[node name="SubmitsScore" type="Node" parent="MarginContainer/VBoxContainer/SubmitButton"]
script = ExtResource("8_p50pp")

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Cancel
"

[node name="CancelsScore" type="Node" parent="MarginContainer/VBoxContainer/CancelButton"]
script = ExtResource("9_3lcgs")
